oops fixed dumb alignment issue

--- a/src/style/Create.css
+++ b/src/style/Create.css
@@ -13,7 +13,6 @@ form {
       padding: 5px;
       margin: 10px;
       color:rgb(187, 177, 67);
-      width: min-content;
 }
 
 input {
